[gd_scene load_steps=4 format=3 uid="uid://d2yjq2dua1vf8"]

[ext_resource type="Script" uid="uid://cqoo37jtdcvq1" path="res://src/scenes/MapMaker/map_maker.gd" id="1_40rcr"]
[ext_resource type="Script" uid="uid://5vof0o0vc8jj" path="res://src/scenes/MapMaker/new_area.gd" id="2_xywia"]
[ext_resource type="Script" uid="uid://bglra7w6c0dvt" path="res://src/scenes/MapMaker/bg_loader.gd" id="3_kkfgx"]

[node name="MapMaker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40rcr")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1151.0
offset_bottom = 66.0
size_flags_horizontal = 3

[node name="NewArea" type="Button" parent="HBoxContainer" groups=["NewAreaButton"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Add New Area"
script = ExtResource("2_xywia")

[node name="PrintMap" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Debug (Print Map)"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_top = 72.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="AreaContainer" type="HFlowContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1151.42, 0)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BGLoader" type="FileDialog" parent="." groups=["FileDialogs"]]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
option_count = 3
option_0/name = "*.png"
option_1/name = "*.jpg"
option_2/name = "*.jpeg"
script = ExtResource("3_kkfgx")

[connection signal="area_passer" from="HBoxContainer/NewArea" to="." method="_on_new_area_area_passer"]
[connection signal="map_updater" from="HBoxContainer/NewArea" to="." method="_on_new_area_map_updater"]
[connection signal="pressed" from="HBoxContainer/NewArea" to="HBoxContainer/NewArea" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/PrintMap" to="." method="_on_print_map_pressed"]
[connection signal="pressed" from="HBoxContainer/PrintMap" to="HBoxContainer/PrintMap" method="_on_pressed"]
[connection signal="file_selected" from="BGLoader" to="BGLoader" method="_on_file_selected"]
